--- a/app/views/admin/application_settings/_protected_paths.html.haml
+++ b/app/views/admin/application_settings/_protected_paths.html.haml
@@ -4,7 +4,7 @@
   %fieldset
     .form-group
       = f.gitlab_ui_checkbox_component :throttle_protected_paths_enabled,
-      s_('Enable rate limiting for POST requests to the specified paths'),
+      _('Enable rate limiting for POST requests to the specified paths'),
       help_text: _('Helps reduce request volume for protected paths.')
     .form-group
       = f.label :throttle_protected_paths_requests_per_period, 'Maximum requests per period per user', class: 'label-bold'
