Fix repository analytics ref dropdown
The ref dropdown on the repo analytics was adding the
path suffix twice due to a JS fix made for another page
that uses the same dropdown. This change fixes the
issue for the repo analytics page while also keeping
the ability for other pages to use the previous fix.

Changelog: fixed

--- a/app/views/projects/graphs/charts.html.haml
+++ b/app/views/projects/graphs/charts.html.haml
@@ -46,7 +46,7 @@
     .col-md-6
       .tree-ref-container
         .tree-ref-holder
-          = render 'shared/ref_switcher', destination: 'graphs_commits'
+          = render 'shared/ref_switcher', destination: 'graphs_commits', path: @path
         %ul.breadcrumb.repo-breadcrumb
           = commits_breadcrumbs
 
