--- a/app/views/projects/tree/_tree_header.html.haml
+++ b/app/views/projects/tree/_tree_header.html.haml
@@ -1,6 +1,6 @@
 .tree-ref-container.gl-display-flex.mb-2.mb-md-0
   .tree-ref-holder
-    = render 'shared/ref_switcher', destination: 'tree', path: @path, show_create: true
+    = render 'shared/ref_switcher', destination: 'tree', show_create: true
 
   #js-repo-breadcrumb{ data: breadcrumb_data_attributes }
 
