Migrate checkboxes on user notifications page to be Pajamas compliant
Part of Pajamas migration day

Changelog: changed

--- a/app/views/profiles/notifications/show.html.haml
+++ b/app/views/profiles/notifications/show.html.haml
@@ -23,7 +23,7 @@
       %h5.gl-mt-0
         = _('Global notification settings')
 
-      = form_for @user, url: profile_notifications_path, method: :put, html: { class: 'update-notifications gl-mt-3' } do |f|
+      = gitlab_ui_form_for @user, url: profile_notifications_path, method: :put, html: { class: 'update-notifications gl-mt-3' } do |f|
         = render_if_exists 'profiles/notifications/email_settings', form: f
 
       = label_tag :global_notification_level, "Global notification level", class: "label-bold"
@@ -35,10 +35,9 @@
 
       .clearfix
 
-      = form_for @user, url: profile_notifications_path, method: :put do |f|
-        %label{ for: 'user_notified_of_own_activity' }
-          = f.check_box :notified_of_own_activity
-          %span= _('Receive notifications about your own activity')
+      = gitlab_ui_form_for @user, url: profile_notifications_path, method: :put do |f|
+        .form-group
+          = f.gitlab_ui_checkbox_component :notified_of_own_activity, _('Receive notifications about your own activity')
 
       %hr
       %h5
