--- a/app/views/shared/web_hooks/_form.html.haml
+++ b/app/views/shared/web_hooks/_form.html.haml
@@ -17,13 +17,14 @@
   %ul.list-unstyled
     %li
       = form.gitlab_ui_checkbox_component :push_events, s_('Webhooks|Push events')
-      = form.text_field :push_events_branch_filter, class: 'form-control gl-form-input', placeholder: 'Branch name or wildcard pattern to trigger on (leave blank for all)'
-      %p.text-muted.gl-ml-1
+      = form.text_field :push_events_branch_filter, style: 'margin-left: 1.5rem', class: 'form-control gl-form-input',
+          placeholder: 'Branch name or wildcard pattern to trigger on (leave blank for all)'
+      %p.form-text.text-muted.custom-control
         = s_('Webhooks|Push to the repository.')
     %li
-      = form.gitlab_ui_checkbox_component :tag_push_events, s_('Webhooks|Tag push events')
-      %p.text-muted.gl-ml-1
-        = s_('Webhooks|A new tag is pushed to the repository.')
+      = form.gitlab_ui_checkbox_component :tag_push_events,
+          s_('Webhooks|Tag push events'),
+          help_text: s_('Webhooks|A new tag is pushed to the repository.')
     %li
       = form.gitlab_ui_checkbox_component :note_events,
           s_('Webhooks|Comments'),
