Activate experiments on the checkout page

--- a/ee/app/views/subscriptions/new.html.haml
+++ b/ee/app/views/subscriptions/new.html.haml
@@ -3,6 +3,7 @@
   = render "layouts/google_tag_manager_head"
   = render "layouts/one_trust"
 = render "layouts/google_tag_manager_body"
+= render "layouts/published_experiments"
 
 - Gitlab::Tracking.event(body_data_page, 'render',
                          label: 'saas_checkout',
