Move diff overflow warning into component
Relocates the diff overflow warning partial into a new component.

Changelog: changed

--- a/app/views/projects/diffs/_diffs.html.haml
+++ b/app/views/projects/diffs/_diffs.html.haml
@@ -28,7 +28,7 @@
     = render Diffs::StatsComponent.new(diff_files: diff_files)
 
 - if render_overflow_warning?(diffs)
-  = render 'projects/diffs/warning', diff_files: diffs
+  = render Diffs::OverflowWarningComponent.new(diffs: diffs, diff_files: diff_files, project: @project, commit: @commit, merge_request: @merge_request)
 
 .files{ data: { can_create_note: can_create_note } }
   - if load_diff_files_async
