--- a/ee/app/views/groups/security/policies/new.html.haml
+++ b/ee/app/views/groups/security/policies/new.html.haml
@@ -1,6 +1,5 @@
 - add_to_breadcrumbs s_("SecurityOrchestration|Policies"), group_security_policies_path(@group)
 - breadcrumb_title s_("SecurityOrchestration|New policy")
 - page_title s_("SecurityOrchestration|Policy editor")
-- data = security_orchestration_policy_data(@group)
 
-#js-group-policy-builder-app{ data: data }
+#js-group-policy-builder-app{ data: security_orchestration_policy_data(@group) }
