Remove extra margin on contribution checkbox label

--- a/app/views/shared/issuable/form/_contribution.html.haml
+++ b/app/views/shared/issuable/form/_contribution.html.haml
@@ -10,7 +10,7 @@
 %hr
 
 .form-group.row
-  %label.col-form-label.col-sm-2
+  %label.col-form-label.col-sm-2.pt-sm-0
     = _('Contribution')
   .col-sm-10
     = form.gitlab_ui_checkbox_component :allow_collaboration,
