This MR replaces generic checkbox
This MR replaces generic checkbox with GitLab UI styled checkbox

Changelog: changed
MR: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/85327
EE: true

--- a/ee/app/views/groups/ldap_group_settings/_form.html.haml
+++ b/ee/app/views/groups/ldap_group_settings/_form.html.haml
@@ -1,11 +1,9 @@
 %section.ldap-group-settings
-  = form_for(group, url: group_ldap_settings_url(group), method: :put) do |f|
+  = gitlab_ui_form_for(group, url: group_ldap_settings_url(group), method: :put) do |f|
     .form-holder
       .form-group.row
         .col-sm-10
-          .form-check
-            = f.check_box :unlock_membership_to_ldap, class: 'form-check-input'
-            = f.label :unlock_membership_to_ldap, class: 'form-check-label' do
-              = _('Allow owners to manually add users outside of LDAP')
+          = f.gitlab_ui_checkbox_component :unlock_membership_to_ldap,
+            _('Allow owners to manually add users outside of LDAP')
     .form-actions
       = f.submit _('Save'), class: 'gl-button btn btn-confirm qa-save'
