Import highlight.js themes
Imported themes for highlight.js

--- a/app/assets/stylesheets/highlight/themes/solarized-light.scss
+++ b/app/assets/stylesheets/highlight/themes/solarized-light.scss
@@ -1,6 +1,7 @@
 /* https://gist.github.com/qguv/7936275 */
 
 @import '../common';
+@import 'highlight.js/styles/base16/solarized-light.css';
 
 /*
 * Solarized light syntax colors
