Make blob page use JS path
Blob page is relying on the JS version of the ref switch path,
so the test was failing. Opting into the JS version fixes the test.

--- a/app/views/projects/blob/_breadcrumb.html.haml
+++ b/app/views/projects/blob/_breadcrumb.html.haml
@@ -2,7 +2,7 @@
 .nav-block
   .tree-ref-container
     .tree-ref-holder
-      = render 'shared/ref_switcher', destination: 'blob', path: @path
+      = render 'shared/ref_switcher', destination: 'blob'
 
     %ul.breadcrumb.repo-breadcrumb
       %li.breadcrumb-item
