--- a/app/views/admin/application_settings/_repository_storage.html.haml
+++ b/app/views/admin/application_settings/_repository_storage.html.haml
@@ -1,16 +1,16 @@
-= form_for @application_setting, url: repository_admin_application_settings_path(anchor: 'js-repository-storage-settings'), html: { class: 'fieldset-form' } do |f|
+= gitlab_ui_form_for @application_setting, url: repository_admin_application_settings_path(anchor: 'js-repository-storage-settings'), html: { class: 'fieldset-form' } do |f|
   = form_errors(@application_setting)
 
   %fieldset
     .sub-section
       %h4= _('Hashed repository storage paths')
       .form-group
-        .form-check
-          = f.check_box :hashed_storage_enabled, class: 'form-check-input qa-hashed-storage-checkbox', disabled: @application_setting.hashed_storage_enabled?
-          = f.label :hashed_storage_enabled, _('Use hashed storage'), class: 'label-bold form-check-label'
-          .form-text.text-muted
-            = _('Use hashed storage paths for newly created and renamed repositories. Always enabled since 13.0.')
-            = link_to s_('Learn more.'), help_page_path('administration/repository_storage_types.md', anchor: 'hashed-storage'), target: '_blank', rel: 'noopener noreferrer'
+        - repository_storage_help_link_url = help_page_path('administration/repository_storage_types.md')
+        - repository_storage_help_link_start = '<a href="%{url}" target="_blank" rel="noopener noreferrer">'.html_safe % { url: repository_storage_help_link_url }
+        = f.gitlab_ui_checkbox_component :hashed_storage_enabled,
+           _('Use hashed storage'),
+           checkbox_options: { disabled: @application_setting.hashed_storage_enabled? },
+           help_text: _('Use hashed storage paths for newly created and renamed repositories. Always enabled since 13.0. %{link_start}Learn more.%{link_end}').html_safe % { link_start: repository_storage_help_link_start, link_end: '</a>'.html_safe }
 
     .sub-section
       %h4= _("Storage nodes for new repositories")
