--- a/app/views/admin/runners/edit.html.haml
+++ b/app/views/admin/runners/edit.html.haml
@@ -8,10 +8,10 @@
   - breadcrumb_title runner_name
   - page_title runner_name
 
-#js-admin-runner-edit{ data: {runner_id: @runner.id} }
+#js-admin-runner-edit{ data: {runner_id: @runner.id, runner_url: admin_runner_path(@runner) } }
 
 .gl-overflow-auto
-  %h4= _('Restrict projects for this runner')
+  %h4.gl-font-lg.gl-my-5= _('Restrict projects for this runner')
 
 - if @runner.runner_projects.any?
   %table.table{ data: { testid: 'assigned-projects' } }
@@ -32,7 +32,7 @@
 %table.table{ data: { testid: 'unassigned-projects' } }
   %thead
     %tr
-      %th= _('Project')
+      %th= s_('Runners|Select projects to assign to this runner')
       %th
 
   %tr
