Fix Broadcast message link color

--- a/app/assets/stylesheets/framework/broadcast_messages.scss
+++ b/app/assets/stylesheets/framework/broadcast_messages.scss
@@ -19,6 +19,11 @@
   p {
     margin-bottom: 0;
   }
+
+  a {
+    color: inherit;
+    text-decoration: underline;
+  }
 }
 
 .broadcast-notification-message {
