Introduce empty file tree with feature flag in pipeline editor
This is the first step to adding the file tree in the pipeline
editor. The feature is hidden behind the `pipeline_editor_file_tree`
feature flag.

--- a/app/views/projects/ci/pipeline_editor/show.html.haml
+++ b/app/views/projects/ci/pipeline_editor/show.html.haml
@@ -1,5 +1,6 @@
 - @force_fluid_layout = true
 - add_page_specific_style 'page_bundles/pipelines'
+- add_page_specific_style 'page_bundles/pipeline_editor'
 
 - page_title s_('Pipelines|Pipeline Editor')
 - content_for :prefetch_asset_tags do
